--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.0.1",
+    "axios": "^0.21.4",
+    "form-data": "^4.0.0",
+    "moment": "^2.29.4",
+    "mongodb": "^6.2.0",
+    "next": "14.0.1",
     "react": "^18",
+    "react-cloudinary-upload-widget": "^2.0.0",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
