Update award lists

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ NEXT_PUBLIC_CLOUDFOLDER = 'ager_votify';
 NEXT_PUBLIC_DROPBOX = '1dsf42dl1i2';
 NEXT_PUBLIC_INSTAGRAM = 'd7aadf962m';
 // Database
-DB_URL = mongodb://localhost:27017/
+DB_URL = mongodb+srv://ager-votify:ZWHyO7RtAIeYkgUH@cluster0.becueii.mongodb.net/?retryWrites=true&w=majority
 # DB_URL = 'mongodb+srv://king:GM2fO0wzahlRSzux@cluster0.uihlxu1.mongodb.net/?retryWrites=true&w=majority';
 DBNAME = ager_votify
